[gd_scene load_steps=13 format=2]

[ext_resource path="res://Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileDemo01.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tempo.tscn" type="PackedScene" id=4]
[ext_resource path="res://TriggerMainRiff.tscn" type="PackedScene" id=5]
[ext_resource path="res://DemoLevel01.gd" type="Script" id=6]
[ext_resource path="res://DemoMusic.tscn" type="PackedScene" id=7]
[ext_resource path="res://TriggerBeat01.tscn" type="PackedScene" id=8]
[ext_resource path="res://Bloc.tscn" type="PackedScene" id=9]
[ext_resource path="res://Bloc03.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment(){
	COLOR = vec4(.5,.5,.5,1);
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="DemoLevel01" type="Node2D"]
script = ExtResource( 6 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1088.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" parent="." instance=ExtResource( 1 )]

[node name="Tempo" parent="." instance=ExtResource( 4 )]
visible = false
bpm = 150
debug_bgm = false
measure_sound = false
quart_sound = false

[node name="DemoMusic" parent="." instance=ExtResource( 7 )]

[node name="TileDemo01" parent="." instance=ExtResource( 3 )]
material = SubResource( 2 )
tile_data = PoolIntArray( 65535, 0, 0, 851975, 0, 0, 851976, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 1024 )

[node name="TriggerMainRiff" parent="." instance=ExtResource( 5 )]
position = Vector2( 320, 1024 )

[node name="TriggerBeat01" parent="." instance=ExtResource( 8 )]
position = Vector2( 544, 832 )

[node name="Bloc01" parent="." instance=ExtResource( 9 )]
position = Vector2( 416, 1024 )
direction = Vector2( 0, -32 )
tween_duration = 0

[node name="Bloc03" parent="." instance=ExtResource( 10 )]
position = Vector2( 608, 896 )
[connection signal="body_entered" from="TriggerMainRiff" to="." method="_on_TriggerMainRiff_body_entered"]
[connection signal="body_entered" from="TriggerBeat01" to="." method="_on_TriggerBeat01_body_entered"]
